--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
