--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^11.0.5",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
