--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "formik": "^2.4.6",
     "framer-motion": "^12.6.3",
+    "jalaali-js": "^1.2.8",
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
