--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/jalaali-js": "^1.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
