--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^11.0.5",
+    "sharp": "^0.34.1",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
